<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">http://123.206.51.151/BNU-Crow-Config/about_us/</string>
    <string name="activity_url">http://123.206.51.151/Xiaoya-Activity</string>
    <string name="app_name">北师小鸦 2</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="autofill_password">password</string>
    <string name="autofill_username">username</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">取消</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="class1">1</string>
    <string name="class10">10</string>
    <string name="class11">11</string>
    <string name="class12">12</string>
    <string name="class2">2</string>
    <string name="class3">3</string>
    <string name="class4">4</string>
    <string name="class5">5</string>
    <string name="class6">6</string>
    <string name="class7">7</string>
    <string name="class8">8</string>
    <string name="class9">9</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="course_details">课程详情</string>
    <string name="credit">学分:</string>
    <string name="crow_img_description">BNU-Crow</string>
    <string name="do_you_want_to_export_calendar">"同步【课程表】至【系统日历】
(免费试用)"</string>
    <string name="do_you_want_to_open_navigation_to">是否导航至</string>
    <string name="donate_button">点此付费订阅</string>
    <string name="donate_details">因研发与持续维护成本高，《北师小鸦 2》为付费软件，采用订阅制付费模式，订阅费用为每月3元。</string>
    <string name="donate_us">付费订阅使用二鸦</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_solutions">"用户名密码真的输对了吗？（网页登录教务系统试试？）
请检查网络环境（换到4G试试？）"</string>
    <string name="export">导出</string>
    <string name="export_1_month">同步一月</string>
    <string name="export_1_week">同步7天内课程时间</string>
    <string name="export_all">导出全部</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fail_to_export_calendar">导出失败</string>
    <string name="food_not_enough">鸦粮不足</string>
    <string name="function_status_login">登录数字京师</string>
    <string name="function_status_login_description" />
    <string name="function_status_logining">登录中…</string>
    <string name="function_status_logining_description">正在登录中，请耐心等待……</string>
    <string name="function_status_logout">注销：%1$s</string>
    <string name="function_status_logout_description">注销登录状态并忘记记住的账号</string>
    <string name="gpa_report">GPA 报告</string>
    <string name="has_multiple_location">多个上课地点</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="input_password">数字京师密码</string>
    <string name="input_username">学号</string>
    <string name="item_view_role_description">Tab</string>
    <string name="library_book_url" formatted="false">http://cas.bnu.edu.cn/cas/login?service=https%3A%2F%2Fbnu-primo.hosted.exlibrisgroup.com%3A443%2Fprimo_library%2Flibweb%2FcasRedirect%3FauthenticationProfile%3D86BNU_CAS%26targetURL%3Dhttps%253A%252F%252Fbnu-primo.hosted.exlibrisgroup.com%252Fprimo-explore%252Fsearch%253Fvid%253D86BNU%2526lang%253Dzh%2525255FCN%2526sortby%253Drank%2526from-new-ui%253D1%2526authenticationProfile%253D86BNU_CAS%26institution%3D86BNU</string>
    <string name="library_borrow_url" formatted="false">http://cas.bnu.edu.cn/cas/login?service=https%3A%2F%2Fbnu-primo.hosted.exlibrisgroup.com%3A443%2Fprimo_library%2Flibweb%2FcasRedirect%3FauthenticationProfile%3D86BNU_CAS%26targetURL%3Dhttps%253A%252F%252Fbnu-primo.hosted.exlibrisgroup.com%252Fprimo-explore%252Faccount%253Fvid%253D86BNU%2526lang%253Dzh%2525255FCN%2526fromLogin%253Dtrue%2526from-new-ui%253D1%2526authenticationProfile%253D86BNU_CAS%26institution%3D86BNU</string>
    <string name="load_current_week">加载当前周次</string>
    <string name="login">登录</string>
    <string name="login_error">登录错误</string>
    <string name="login_tip">登录数字京师</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="movie_url">http://532movie.bnu.edu.cn</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="navigate_to">点此导航至：</string>
    <string name="navigation">导航</string>
    <string name="need_login_error">正在重新登录，请稍候</string>
    <string name="network_error">网络连接故障，再试试？</string>
    <string name="no_campus_network">请连接校园网</string>
    <string name="notice">公告</string>
    <string name="notice_after_sync_timetable">请定期同步课表，课表不作为选课结果</string>
    <string name="ok">好</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="phone_book_url">https://bnu-crow.com/static/phone-book</string>
    <string name="play_history">播放历史</string>
    <string name="request_calendar_permission">请授权写入日历后再次同步。</string>
    <string name="school_calendar_url">http://123.206.51.151/BNU-Crow/school-calendar.jpg</string>
    <string name="school_map_url">http://www.bnu.edu.cn/map/images/map.jpg</string>
    <string name="score1">平时分:</string>
    <string name="score2">期末分:</string>
    <string name="search">搜索</string>
    <string name="search_menu_title">Search</string>
    <string name="search_movie_hint">搜索视频</string>
    <string name="seat">座号:</string>
    <string name="select_semester">同步</string>
    <string name="select_skin">主题心情</string>
    <string name="skip">下次再说</string>
    <string name="sports_url">http://cas.bnu.edu.cn/cas/login?service=http://jsty.bnu.edu.cn/</string>
    <string name="start_export">同步中～请到桌面添加【日程】小工具</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_function">功能</string>
    <string name="title_timetable">课程表</string>
    <string name="too_frequent_error">访问频繁，两分钟后再试</string>
    <string name="unknown_error">出现了奇怪的问题，待会儿再试试？</string>
    <string name="unknown_location">未知地点，请上报</string>
    <string name="update">立即更新</string>
    <string name="update_tip_title">请更新北师小鸦2</string>
</resources>