<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="?selectableItemBackground" android:paddingTop="@dimen/list_item_vertical_padding" android:paddingBottom="@dimen/list_item_vertical_padding" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/list_item_horizontal_half_padding" android:paddingEnd="@dimen/list_item_horizontal_padding"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/name" android:layout_width="60.0dip" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/name" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class1" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class1" android:layout_marginStart="@dimen/classroom_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class2" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class2" android:layout_marginStart="@dimen/classroom_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class3" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class3" android:layout_marginStart="@dimen/classroom_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class4" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class4" android:layout_marginStart="@dimen/classroom_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class5" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class5" android:layout_marginStart="@dimen/classroom_large_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class6" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class6" android:layout_marginStart="@dimen/classroom_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class7" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class7" android:layout_marginStart="@dimen/classroom_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class8" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class8" android:layout_marginStart="@dimen/classroom_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class9" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class9" android:layout_marginStart="@dimen/classroom_large_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class10" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class10" android:layout_marginStart="@dimen/classroom_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class11" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class11" android:layout_marginStart="@dimen/classroom_margin" />
        <TextView android:textSize="@dimen/classroom_text_size" android:gravity="center" android:id="@id/class12" android:layout_width="@dimen/classroom_number_size" android:layout_height="@dimen/classroom_number_size" android:text="@string/class12" android:layout_marginStart="@dimen/classroom_margin" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>