<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="?selectableItemBackground" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/line_drawable" android:paddingTop="@dimen/list_item_vertical_padding" android:paddingBottom="@dimen/list_item_vertical_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/list_item_horizontal_padding" android:paddingEnd="@dimen/list_item_horizontal_padding" xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" android:textSize="16.0sp" android:gravity="center" android:id="@id/score" android:layout_width="50.0dip" android:layout_height="0.0dip" android:paddingStart="0.0dip" android:paddingEnd="4.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Title" android:textSize="@dimen/list_item_title_text_size" android:id="@id/courseName" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/score" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textSize="@dimen/list_item_small_text_size" android:id="@id/creditCaption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/credit" app:layout_constraintStart_toEndOf="@id/score" app:layout_constraintTop_toBottomOf="@id/courseName" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textSize="@dimen/list_item_small_text_size" android:id="@id/credit" android:layout_width="30.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" app:layout_constraintStart_toEndOf="@id/creditCaption" app:layout_constraintTop_toBottomOf="@id/courseName" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textSize="@dimen/list_item_small_text_size" android:id="@id/scoreCaption1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/score1" android:layout_marginStart="@dimen/list_item_horizontal_margin" app:layout_constraintStart_toEndOf="@id/credit" app:layout_constraintTop_toBottomOf="@id/courseName" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textSize="@dimen/list_item_small_text_size" android:id="@id/score1" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" app:layout_constraintStart_toEndOf="@id/scoreCaption1" app:layout_constraintTop_toBottomOf="@id/courseName" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textSize="@dimen/list_item_small_text_size" android:id="@id/scoreCaption2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/score2" android:layout_marginStart="@dimen/list_item_horizontal_margin" app:layout_constraintStart_toEndOf="@id/score1" app:layout_constraintTop_toBottomOf="@id/courseName" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textSize="@dimen/list_item_small_text_size" android:id="@id/score2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/scoreCaption2" app:layout_constraintTop_toBottomOf="@id/courseName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>